modified full screen plugin to directive

--- a/views/default/login.html
+++ b/views/default/login.html
@@ -36,7 +36,6 @@
     </div>
   </div>
 </div>
-<div id="backgroundImage" style="position: absolute;">
-  <img src="login/bg.jpg" alt="全屏背景图" width="800" height="600" />
-</div>
+
+<full-screen-background image-src="login/bg.jpg" />
 {% endblock %}
