add gulp handler

--- a/views/layout.html
+++ b/views/layout.html
@@ -46,5 +46,6 @@
   </script>
   <script src="/lib/require/require.js"></script>
   <script src="/main.js"></script>
+  <script src="/bootstrap.js"></script>
 </body>
 </html>
