--- a/views/default/welcome.html
+++ b/views/default/welcome.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 <div ng-controller="welcomeCtrl">
-  <div id="testReact"></div>
+  <div id="testJSX"></div>
 </div>
 {% endblock %}
