--- a/views/layout.html
+++ b/views/layout.html
@@ -26,8 +26,8 @@
   <div class="footer-container color-bg-black color-gray">
     <div class="copyright text-center">
       <ul class="list-unstyled inline-block">
-        <li>Copyright © {{now() | date('Y')}} {{systemParams.corporation}}. All Rights Reserved.</li>
-        <li><a href="{{systemParams.github}}" target="_blank">{{systemParams.author}}</a> 版权所有 {{systemParams.ICPNumber}}</li>
+        <li>Copyright © {{now() | date('Y')}} <a href="{{systemParams.github}}" target="_blank">{{systemParams.corporation}}</a>. All Rights Reserved.</li>
+        <li>{{systemParams.author}} 版权所有 {{systemParams.ICPNumber}}</li>
       </ul>
     </div>
   </div>
