--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -3,6 +3,30 @@ body {
   padding: 0px;
   font-family: proxima-nova,"Hiragino Sans GB","Microsoft YaHei","Wenquanyi Micro Hei","WenQuanYi Micro Hei Mono","WenQuanYi Zen Hei","WenQuanYi Zen Hei","Apple LiGothic Medium",SimHei,"ST Heiti","WenQuanYi Zen Hei Sharp";
 }
+a:link {
+  color: #ccc;
+  text-decoration: none;
+}
+a:visited {
+  color: #ccc;
+  text-decoration: none;
+}
+a:hover {
+  color: #ccc;
+  text-decoration: underline;
+}
+a:active {
+  color: #ccc;
+  text-decoration: underline;
+}
+.btn {
+  font-size: 16px;
+  padding: 10px 30px;
+}
+.form-control {
+  height: 45px;
+  font-size: 16px;
+}
 .color-bg-black {
   background-color: #141c26;
 }
