add meta to head

--- a/views/layout.html
+++ b/views/layout.html
@@ -2,16 +2,17 @@
 <html>
 <head lang="en">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <meta http-equiv="Pragma" content="no-cache"/>
+  <meta name="keywords" content="node.js,nodejs,node.js basicer, nodejs-basicer,chrome v8,data-intensive,real-time,event-driven,non-blocking io,javascripts,js" />
+  <meta name="description" content="nodejs-basicer is just a basic node.js framework" />
 
-  <title>{% block title %}{{title}}{% endblock %}</title>
+  <title>{% block title %}nodejs-basicer{% endblock %}</title>
 
   <link rel="stylesheet" href="/lib/bootstrap-3.2.0/bootstrap.min.css" />
   <link rel="stylesheet" href="/style.css" />
 
   {% if styles %}
     {% for style in styles %}
-    <link rel="stylesheet" href="{{style}}" />
+      <link rel="stylesheet" href="{{style}}" />
     {% endfor %}
   {% endif %}
 
