--- a/views/default/error.html
+++ b/views/default/error.html
@@ -1,6 +1,6 @@
 {% extends '../layout.html' %}
 
-{% block content %}
+{% block body-container %}
 <div>
   <span style="font-size: 40px;">error</span>
 </div>
