--- a/views/default/welcome.html
+++ b/views/default/welcome.html
@@ -1,6 +1,6 @@
 {% extends '../footer-layout.html' %}
 
-{% block content %}
+{% block content-container %}
 <div ng-controller="welcomeCtrl">
   <div id="testJSX"></div>
 </div>
