--- a/views/footer-layout.html
+++ b/views/footer-layout.html
@@ -1,7 +1,7 @@
 {% extends './layout.html' %}
 
-{% block body %}
-{% block content %}{% endblock %}
+{% block body-container %}
+{% block content-container %}{% endblock %}
 
 <div class="footer-container color-bg-black color-gray">
   <div class="copyright text-center">
