--- a/views/layout.html
+++ b/views/layout.html
@@ -23,7 +23,7 @@
   {% endif %}
 </head>
 <body>
-  {% block body %}{% endblock %}
+  {% block body-container %}{% endblock %}
 
   <script type="text/javascript">
     var GlobalConfig = {
