--- a/views/default/login.html
+++ b/views/default/login.html
@@ -1,6 +1,6 @@
 {% extends '../footer-layout.html' %}
 
-{% block content %}
+{% block content-container %}
 <div class="content-container text-center">
   <div class="slogan-container inline-block">
     <span class="img-slogan"></span>
