--- a/views/default/not-found.html
+++ b/views/default/not-found.html
@@ -1,6 +1,6 @@
 {% extends '../layout.html' %}
 
-{% block content %}
+{% block body-container %}
 <div>
   <span style="font-size: 40px;">not found</span>
 </div>
