--- a/views/mobile/render/layout.html
+++ b/views/mobile/render/layout.html
@@ -8,25 +8,14 @@
   <meta name="keywords" content="angular,angularjs,requirejs,boilerplate,angularjs-requirejs,angularjs-requirejs-boilerplate">
   <title>ipluser - {= title || 'angularjs-requirejs-boilerplate' =}</title>
 
-  {% if isDevMode %}
-  <link href="/static/libs/bootstrap/less/bootstrap.less" rel="stylesheet/less">
-  {% else %}
-  <link href="/static/libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-  {% endif %}
-
+  <link rel="stylesheet" href="/static/libs/bootstrap/dist/css/bootstrap.min.css">
   <link href="/static/libs/github-markdown-css/github-markdown.css" rel="stylesheet">
-  <link rel="stylesheet{% if isDevMode %}/less{% endif %}" type="text/css"
-      href="/static/styles/mobile/style{% if isDevMode %}.less{% else %}{= '.css' | buildNumber =}{% endif %}"/>
+  <link rel="stylesheet" href="{= '/static/styles/desktop/style.css' | buildNumber =}"/>
 
   {% if styles %}
   {% for style in styles %}
-  <link rel="stylesheet{% if isDevMode %}/less{% endif %}" type="text/css"
-      href="/static/styles/{= style =}{% if isDevMode %}.less#!watch{% else %}{= '.css' | buildNumber =}{% endif %}" />
+  <link rel="stylesheet" href="/static/styles/{= style =}{= '.css' | buildNumber =}" />
   {% endfor %}
-  {% endif %}
-
-  {% if isDevMode %}
-  <script type="text/javascript" src="/static/libs/less/dist/less.min.js"></script>
   {% endif %}
 </head>
 <body>
