--- a/views/mobile/templates/markdown/README.html
+++ b/views/mobile/templates/markdown/README.html
@@ -24,25 +24,35 @@ you can quick start your new project with angularjs-requirejs-boilerplate.</p>
 $ npm install
 </code></pre>
 <h3 id="development">Development</h3>
-<p>Development Environment using gulp-nodemon, gulp-livereload and gulp-jshint.</p>
+<p>Development Environment using gulp-nodemon, <a href="https://www.browsersync.io/">browser-sync</a> and gulp-jshint.</p>
 <ol>
 <li>Make sure <strong>isDevMode</strong> configuration is <strong>true</strong> in <strong>locals.js</strong></li>
-<li>Install <a href="http://livereload.com/extensions/">livereload chrome extension</a></li>
-<li>Start the server with <code>gulp start-develop</code></li>
+<li>Start development mode with <code>gulp --development</code></li>
+<li>Input <code>http://localhost:devPort</code> with browsers</li>
 </ol>
 <h3 id="production">Production</h3>
 <ol>
 <li>Make sure <strong>isDevMode</strong> configuration is <strong>false</strong> in <strong>locals.js</strong></li>
-<li>Compile and build with <code>gulp</code></li>
+<li>Compile and build with <code>gulp --production</code></li>
 <li>Start the server with node or pm2 or others</li>
+<li>Input <code>http://localhost:port</code> with browsers</li>
 </ol>
 <h3 id="configuration">Configuration</h3>
 <p>System configuration are stored in the <strong>locals.js</strong> file.</p>
 <h3 id="samples-page">Samples Page</h3>
-<p>Start the server and input <code>http://localhost:8099/samples</code> with browsers.</p>
+<p>Start the server and input <code>URL/samples</code> with browsers.</p>
+<h2 id="gulp">Gulp</h2>
+<p>Show task list with <code>gulp help</code>.</p>
 <h2 id="test">Test</h2>
 <p>Test using karma and jasmine, run the test with <code>npm test</code> or <code>karma start</code>. Unit and coverage test report are stored in report directory.</p>
 <h2 id="changelog">Changelog</h2>
+<h3 id="2-1-0">2.1.0</h3>
+<ul>
+<li>replace gulp-livereload with browser-sync</li>
+<li>add gulp-help, gulp-size and others gulp components</li>
+<li>remove less.js<br>
+10.01.2016</li>
+</ul>
 <h3 id="2-0-0">2.0.0</h3>
 <ul>
 <li>adjust directory and code of project</li>
