--- a/views/mobile/templates/markdown/README.html
+++ b/views/mobile/templates/markdown/README.html
@@ -40,12 +40,18 @@ $ npm install
 <h3 id="configuration">Configuration</h3>
 <p>System configuration are stored in the <strong>locals.js</strong> file.</p>
 <h3 id="samples-page">Samples Page</h3>
-<p>Start the server and input <code>URL/samples</code> with browsers.</p>
+<p>Start the server and input <code>http://localhost:port/samples</code> with browsers.</p>
 <h2 id="gulp">Gulp</h2>
 <p>Show task list with <code>gulp help</code>.</p>
 <h2 id="test">Test</h2>
 <p>Test using karma and jasmine, run the test with <code>npm test</code> or <code>karma start</code>. Unit and coverage test report are stored in report directory.</p>
 <h2 id="changelog">Changelog</h2>
+<h3 id="2-2-0">2.2.0</h3>
+<ul>
+<li>add build-templates task to optimize ngTemplates that registers AngularJS templates in the $templateCache</li>
+<li>add error and listening event to server<br>
+17.01.2016</li>
+</ul>
 <h3 id="2-1-0">2.1.0</h3>
 <ul>
 <li>replace gulp-livereload with browser-sync</li>
