--- a/views/desktop/templates/markdown/README.html
+++ b/views/desktop/templates/markdown/README.html
@@ -46,6 +46,12 @@ $ npm install
 <h2 id="test">Test</h2>
 <p>Test using karma and jasmine, run the test with <code>npm test</code> or <code>karma start</code>. Unit and coverage test report are stored in report directory.</p>
 <h2 id="changelog">Changelog</h2>
+<h3 id="2-3-0">2.3.0</h3>
+<ul>
+<li>watch gulp files</li>
+<li>the browser reload while restart nodemon<br>
+27.01.2016</li>
+</ul>
 <h3 id="2-2-1">2.2.1</h3>
 <ul>
 <li>fix task can not separate execution with development mode<br>
