--- a/views/mobile/render/layout.html
+++ b/views/mobile/render/layout.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="renderer" content="webkit"/>
-  <meta name="description" content="An complete angularjs requirejs boilerplate for node."/>
+  <meta name="description" content="A complete angularjs requirejs boilerplate for node."/>
   <meta name="keywords" content="angular,angularjs,requirejs,boilerplate,angularjs-requirejs,angularjs-requirejs-boilerplate">
   <title>ipluser - {= title || 'angularjs-requirejs-boilerplate' =}</title>
 
