--- a/views/mobile/templates/markdown/README.html
+++ b/views/mobile/templates/markdown/README.html
@@ -1,5 +1,5 @@
 <h2 id="angularjs-requirejs-boilerplate">angularjs-requirejs-boilerplate</h2>
-<p>An complete angularjs requirejs boilerplate for node. There are angular and test samples in the project,
+<p>A complete angularjs requirejs boilerplate for node. There are angular and test samples in the project,
 you can quick start your new project with angularjs-requirejs-boilerplate.</p>
 <h2 id="features">Features</h2>
 <h3 id="front-end">Front-end</h3>
